--- a/app.css
+++ b/app.css
@@ -41,15 +41,17 @@
   }
   .signup-text{
       width: 530px;
-
+      margin-bottom: 100px;
   }
   .signup-form{
     margin-left: 100px;
     width: 430px;
-    padding: 10px;
+    padding: 20px 20px 20px 15px;
     background:white;
     padding-right: auto;
     padding-left: auto;
+    box-shadow: 0 10px 2px -2px rgb(240, 96, 96);
+    border-radius: 10px;
   }
   .text-title{
       color: rgb(240, 234, 234);
@@ -59,12 +61,51 @@
       width: 500px;
       color: whitesmoke;
   }
-  .form-input{
-      padding: 10px;
+  .card{
+        position: absolute;
+        content: "";
+        top: 116px;
+        left: 746px;
+        padding: 17px 10px;
+        text-align: center;
+        border-radius: 5px;
+        color: white;
+        width: 430px;
+        font-size: 16px;
+        background-color: #5d54a3;
+        box-shadow: 0 10px 2px -2px rgb(240, 96, 96);
+  } 
+  .form-input[type=text], .form-input[type=password], .form-input[type=email] {
+      padding: 15px 2px;
       border-radius: 5px;
       margin-bottom: 15px;
       width: 400px;
+      border: 1px solid rgb(196, 196, 196);
+      border-radius: 4px;
+     
+  }
+  .form-input[type=text]:active{
+      color: var(--blue-color);
   }
   .form-btn{
       width: 400px;
+      padding: 15px 2px;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      width: 400px;
+      background-color: var(--green-color);
+      border: 1px solid rgb(196, 196, 196);
+      border-radius: 4px;
+      color: white;
+  }
+  .terms{
+      font-size: 10px;
+      display: flex;
+      margin-left: 30px;
+      color: rgb(167, 158, 158);
+  }
+  .form-terms{
+      color: red;
+      margin-left: 3px;
+      text-decoration: none;
   }
